--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,261 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+:root{
+  font-size: 62.5%;
+  --color-white:#ffffff;
+  --caolor-dark:#131313;
+  --color-accent:#03EA0C;
+  --color--secondary:#5A5A5A;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root .theme-light{
+  font-size: 62.5%;
+  --color-white:#131313;
+  --caolor-dark:#ffffff;
+  --color-accent:#03EA0C;
+  --color--secondary:#5A5A5A;
+}
+
+.cursor {
+	border:1px solid var(--color-accent);
+	width: 5rem;
+	height: 5rem;
+	border-radius: 50%;
+	position: fixed;
+	/* transform: translate3d(-50%,-50%,0); */
+	/* transition: transform 300ms linear; */
+	mix-blend-mode: difference;
+	z-index: 999;
+	top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.theme-light .port__CTA path.port__InitialLine {
+  stroke: var(--color-white);
+}
+
+.theme-light .port__CTA .port_Path--Accent {
+  fill: var(--color-white);
+}
+
+.theme-light svg:hover path.port_Path--Accent {
+  fill: var(--color-accent);
+}
+.theme-light .port__Lines span {
+  -webkit-text-stroke-color: #606060;
+}
+.theme-light .port__Section--Header >h2 {
+  color: var(--caolor-dark);
+}
+.theme-light .port__Social--Body {
+  background-color: var(--caolor-dark)!important;
+}
+html {
+  scroll-behavior: smooth;
+}
+*{
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+}
+a{
+  color:#ffffff;
+  text-decoration: unset;
+}
+ul{
+  list-style-type: none;
+}
+body {
+  margin: 0;
+  background-color: var(--caolor-dark);
+  font-family: 'Permanent Marker', cursive;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;;
+}
+section.port__Section {
+  padding: 3rem 0;
+}
+/* Color Specifications */
+.port__accent{
+  color:var(--color-accent);
+}
+/* Color Specifications End */
+
+/* TypoGraphy Specifications */
+h1,h2,h3,h4,h5.h6,p{
+  color:var(--color-white);
+}
+.port__Text--Center {
+  text-align: center;
+}
+.port__title--Large {
+  font-size: 5rem;
+}
+.port__title {
+  font-size: 4rem;
+}
+.port__Subtitle {
+  font-size: 3rem;
+}
+.port__Title--Small {
+  font-size: 2rem;
+}
+.port__fs1{
+  font-size: 1rem;
+}
+.port__fs1-2{
+  font-size: 1.2rem;
+}
+.port__fs1-4{
+  font-size: 1.4rem;
+}
+.port__fs1-6{
+  font-size: 1.6rem;
+}
+.port__fs1-8{
+  font-size: 1.8rem;
+}
+.port__fs2{
+  font-size: 2rem;
+}
+.port__fs2-8{
+  font-size: 2.8rem;
+}
+.port__fs3{
+  font-size: 3rem;
+}
+.port__fs3-5{
+  font-size: 3.5rem;
+}
+/* TypoGraphy Specifications End */
+.port__mt-2{
+  margin-top: 2rem!important;
+}
+.port__mt-5{
+  margin-top: 5rem!important;
+}
+.port__mb-2{
+  margin-bottom: 2rem!important;
+}
+.port__mb-5{
+  margin-bottom: 5rem!important;
+}
+.port__mb-10{
+  margin-bottom: 10rem !important;
+}
+
+/* Layout Specifications */
+.port__Container {
+  max-width: 1350px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.port__Layout{
+  display: flex;
+  flex-wrap: wrap;
+  margin:0 -15px;
+}
+.port__Layout [class*="port__Layout--W"]{
+  padding:0 20px;
+}
+.port__Layout--W100{
+  width: 100%;
+}
+.port__Layout--W75{
+  width: 75%;
+}
+.port__Layout--W50{
+  width: 50%;
+}
+.port__Layout--W33{
+  width: 33.33%;
+}
+.port__Layout--W25{
+  width: 25%;
+}
+.port__Layout--H-Start{
+  justify-content: flex-start;;
+} 
+.port__Layout--H-Center{
+  justify-content: center;
+}
+.port__Layout--H-End{
+  justify-content: flex-end;
+}
+.port__Layout--H-SpaceBetween{
+  justify-content: space-between;
+}
+.port__Layout--H-SpaceAround{
+  justify-content: space-around;
+}
+.port__Layout--V-Start{
+  align-items: flex-start;
+} 
+.port__Layout--V-Center{
+  align-items: center;
+}
+.port__Layout--V-End{
+  align-items: flex-end;
+}
+.port__Layout--V-SpaceBetween{
+  align-items: space-between;
+}
+.port__Layout--V-SpaceAround{
+  align-items: space-around;
+}
+/* Layout Specifications End */
+
+/*OWL SLIDER*/
+.port__Owl--Navigation {
+  margin: 30px 0 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+.port__Owl--Navigation >button {
+  background-color: unset;
+  border: 0;
+  margin-left: 10px;
+  cursor: pointer;
+}
+img.port__Light--nav {
+  display: none;
+}
+
+.theme-light img.port__Light--nav {
+  display: block;
+}
+.theme-light img.port__Dark--nav {
+  display: none;
+}
+/*OWL SLIDER END*/
+
+
+@media screen and (max-width:1200px){
+  .port__Container {
+    max-width: 950px;
+}
+.port__Subtitle {
+  font-size: 2.5rem;
+}
+}
+
+@media screen and (max-width:768px){
+  .port__Layout--WM-100{
+    width:100%;
+  }
+  .port__Title--Small {
+    font-size: 1.5rem;
+  }
+  .port__title {
+    font-size: 3rem;
+  }
+  .port__title--Large {
+    font-size: 4rem;
+  }
+  .cursor{
+    display: none;
+  }
 }
