--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -13,3 +13,17 @@ footer {
         font-size: 2rem;
     }
 }
+
+footer img{
+    transform:scale(0.8);
+    animation: pulse 1s linear alternate infinite;
+}
+
+@keyframes pulse{
+    0%{
+        transform:scale(0.8);
+    }
+    100%{
+        transform:scale(1);
+    }
+}
